name:                thread-safe-lists
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/paulolieuthier/haskell-concurrent-lists
license:             LGPL-2.1
license-file:        LICENSE
author:              Paulo Lieuthier
maintainer:          paulolieuthier@gmail.com
copyright:           2017 Paulo Lieuthier
category:            Data Structures
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  other-modules:       ThreadSafeList, CoarseGrained, FineGrained, Optimistic, Lazy, LockFree
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

test-suite thread-safe-lists-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       base, hspec, QuickCheck, thread-safe-lists, random
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

benchmark thread-safe-lists-benchmark
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             Main.hs
  build-depends:       base, thread-safe-lists, criterion, random, random-shuffle
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/paulolieuthier/haskell-concurrent-lists
